# cruzar

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.githooks/: check_commit_msg.py  check_pii.py  commit-msg  pre-commit
config/: categories.yaml  cruzar.yaml  flows.yaml  fx_rates.yaml.example  merchants.yaml  sources.yaml.example
docs/: DEVELOPMENT.md  SPEC.md
docs/design/: anonymizer_chunking.md  query_planner.md
docs/plans/: plan_001_manual_ingest.md  plan_002_transfer_detection.md  plan_003_moey_parser.md  plan_004_revolut_parser.md  plan_005_transfer_patterns.md  plan_006_degiro_parser.html  plan_006_degiro_parser.md  plan_007_interactivebrokers_parser.md  plan_008_fx_rates.md  plan_009_summary_report.md  plan_010_portfolio_delta.md  plan_011_investment_detail.md  plan_012_llm_categorization.html  plan_012_llm_categorization.md  plan_013_restated_conflicts.md  plan_014_llm_extraction_fallback.md  plan_015_report_command_and_harness.md  plan_016_gmail_fetch.html  plan_017_spending_by_category.md  plan_018_conversational_queries.md  plan_019_activobank_multisection.md  plan_020_categorization_prompt_eval.md  plan_021_summary_net.md  plan_022_current_month_valuation.md  plan_023_activobank_per_section_statements.md  plan_024_aforronet_certificado_aforro.md  (+7 more)
scripts/: eval_categorization.py  list_merchants.py
tests/: conftest.py  schema_baseline.sql  test_analytics.py  test_anonymizer.py  test_canonical_amount_dedup.py  test_db_migration.py  test_fx.py  test_pipeline_parse_failure.py  test_report_resilience.py  test_schema_parity.py  test_transfers.py
(+86 files in other folders)
