[project]
name = "cruzar"
version = "0.1.0"
description = "Local, privacy-preserving personal-finance aggregator"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11",
    "pyyaml>=6.0",
    "instructor>=1.0",  # schema-constrained LLM JSON (ADR-2); wraps the OpenAI client
    "openai>=1.0",      # OpenAI-compatible client pointed at the local Ollama endpoint
]

[project.scripts]
cruzar = "cruzar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cruzar"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pyright>=1.1",
    "reportlab>=4.0",  # only to (re)generate the synthetic test fixture PDF
]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
